; ModuleID = '/home/carl/AnghaBench/linux/drivers/iommu/extr_ipmmu-vmsa.c_ipmmu_ctx_write_root.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iommu/extr_ipmmu-vmsa.c_ipmmu_ctx_write_root.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ipmmu_vmsa_domain = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@IM_CTX_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ipmmu_vmsa_domain*, i32, i32)* @ipmmu_ctx_write_root to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ipmmu_ctx_write_root(%struct.ipmmu_vmsa_domain* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.ipmmu_vmsa_domain*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.ipmmu_vmsa_domain* %0, %struct.ipmmu_vmsa_domain** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.ipmmu_vmsa_domain*, %struct.ipmmu_vmsa_domain** %4, align 8
  %8 = getelementptr inbounds %struct.ipmmu_vmsa_domain, %struct.ipmmu_vmsa_domain* %7, i32 0, i32 1
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.ipmmu_vmsa_domain*, %struct.ipmmu_vmsa_domain** %4, align 8
  %13 = getelementptr inbounds %struct.ipmmu_vmsa_domain, %struct.ipmmu_vmsa_domain* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = load i32, i32* @IM_CTX_SIZE, align 4
  %16 = mul i32 %14, %15
  %17 = load i32, i32* %5, align 4
  %18 = add i32 %16, %17
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @ipmmu_write(i32 %11, i32 %18, i32 %19)
  ret void
}

declare dso_local i32 @ipmmu_write(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
